# octopus

./: .env_template  CLAUDE.md  howto.md  octopus.py  pyproject.toml  unified_config_framework_demo.yaml  合并demo的考虑.md
.claude/: settings.local.json
anp_foundation/: anp_user.py  anp_user_local_data.py  contact_manager.py
anp_foundation/auth/: __init__.py  auth_initiator.py  auth_verifier.py
anp_foundation/config/: __init__.py  config_types.py  unified_config.py
anp_foundation/did/: did_format_manager.py  did_tool.py  url_analyzer.py
anp_foundation/did/agent_connect_hotpatch/authentication/: did_wba.py  did_wba_auth_header_memory.py
anp_foundation/domain/: domain_manager.py
anp_foundation/utils/: log_base.py
anp_servicepoint/: auth_exempt_handler.py
anp_servicepoint/core_service_handler/: agent_service_handler.py  did_service_handler.py  publisher_service_handler.py
anp_servicepoint/extend_service_handler/: auth_service_handler.py  host_service_handler.py
anp_servicepoint/extend_service_implementation/did_host/: did_host_manager.py  hosted_did_processor.py  hosted_did_queue_manager.py  hosted_did_result_manager.py
anp_transformer/: agent.py  agent_decorator.py  agent_manager.py  global_router_agent_message.py
anp_transformer/anp_service/: agent_api_call.py  agent_message_p2p.py  anp_sdk_group_member.py  anp_sdk_group_runner.py  anp_tool.py
anp_transformer/local_service/: local_methods_doc.py
anp_workbench_server/: anp_server_lite.py
anp_workbench_server/baseline/anp_middleware_baseline/: anp_auth_middleware.py
anp_workbench_server/baseline/anp_router_baseline/: router_agent.py  router_did.py  router_publisher.py
anp_workbench_server/baseline/anp_router_extend/: router_auth.py  router_host.py
data_user/localhost_9527/agents_config/agent_001/: agent_handlers.py  agent_mappings.yaml
data_user/localhost_9527/agents_config/agent_002/: agent_handlers.py  agent_mappings.yaml  agent_register.py
data_user/localhost_9527/agents_config/agent_caculator/: agent_register.py
data_user/localhost_9527/agents_config/agent_llm/: agent_handlers.py  agent_mappings.yaml  agent_register.py
data_user/localhost_9527/agents_config/orchestrator_agent/: agent_handlers.py  agent_mappings.yaml
data_user/localhost_9527/anp_users/user_27c0b1d11180f973/: ad.json  agent_cfg.yaml  api_interface.json  api_interface.yaml  did_document.json  key-1_private.pem  key-1_public.pem  private_key.pem  public_key.pem  template-ad.json
data_user/localhost_9527/anp_users/user_28cddee0fade0258/: ad.json  api_interface.json  did_document.json  key-1_private.pem  key-1_public.pem  public_key.pem
data_user/localhost_9527/anp_users/user_3ea884878ea5fbb1/: ad.json  api_interface.yaml  key-1_private.pem
data_user/localhost_9527/anp_users/user_5fea49e183c6c211/: ad.json  agent_cfg.yaml  key-1_private.pem
data_user/localhost_9527/anp_users/user_e0959abab6fc3c3d/: ad.json  api_interface.json  api_interface.yaml  key-1_public.pem  private_key.pem  public_key.pem
data_user/localhost_9527/anp_users/user_hosted_agent-did.com_80_/: agent_cfg.yaml  private_key.pem  public_key.pem
data_user/localhost_9527/anp_users/user_hosted_open_localhost_9527_b9b6b73772c692db/: private_key.pem
data_user/open_localhost_9527/anp_users_hosted/user_b9b6b73772c692db/: did_document.json
data_user/open_localhost_9527/hosted_did_queue/completed/: 061025c7-6631-478e-8eaa-8e7653c1b836.json  083981c1-312a-4161-b42f-c9483042089f.json  1e88326e-d184-4894-b0f5-8623a734c2b3.json  (+3 more)
docs/jwt_key/: private_key.pem  public_key.pem
examples/flow_anp_agent/: flow_anp_agent.py  local_methods_doc.json
octopus/: README.md  anp_sdk_integration.md  master_agent.py  octopus_main.py
octopus/agents/: agents-readme.md  text_processor_agent.py
octopus/agents/message_agent/: message_agent.py
octopus/anp_sdk/anp_auth/: auth_middleware.py  custom_did_resolver.py  did_auth.py  jwt_keys.py  token_auth.py
octopus/anp_sdk/anp_crawler/: simple_example.py
octopus/api/: agent_loader.py  chat_router.py
octopus/config/: settings.py
octopus/test_scripts/: simple_openai_test.py
web/: index.html  script.js  styles.css
(+35 files in other folders)
